--- a/static/app/basic/material.html
+++ b/static/app/basic/material.html
@@ -39,7 +39,7 @@
                                 <td>
                                     <div class="input-group date  form_datetime " style="float: left">
                                         <input type="text" size="16" style="height: 35px" name="expiryDate"
-                                               class="form-control input-small inline"/>
+                                               class="inputtime form-control input-small inline"/>
                                         <span class="input-group-btn">
                                         <button class="btn default date-set" type="button">
                                             <i class="fa fa-calendar"></i>
@@ -104,7 +104,7 @@
                                 <td>
                                     <div class="input-group date  form_datetime " style="float: left">
                                         <input type="text" size="16" style="height: 35px" name="expiryDate"
-                                               class="form-control input-small inline"/>
+                                               class="inputtime form-control input-small inline"/>
                                         <span class="input-group-btn">
                                         <button class="btn default date-set" type="button">
                                             <i class="fa fa-calendar"></i>
