--- a/static/app/basic/device.html
+++ b/static/app/basic/device.html
@@ -35,7 +35,7 @@
                                 <td>
                                     <div class="input-group date  form_datetime " style="float: left">
                                         <input type="text" size="16" style="height: 35px" name="expiryDate"
-                                               class="form-control input-small inline"/>
+                                               class="inputtime form-control input-small inline"/>
                                         <span class="input-group-btn">
                                         <button class="btn default date-set" type="button">
                                             <i class="fa fa-calendar"></i>
@@ -93,7 +93,7 @@
                                 <td>
                                     <div class="input-group date  form_datetime " style="float: left">
                                         <input type="text" size="16" style="height: 35px" name="expiryDate"
-                                               class="form-control input-small inline"/>
+                                               class="inputtime form-control input-small inline"/>
                                         <span class="input-group-btn">
                                         <button class="btn default date-set" type="button">
                                             <i class="fa fa-calendar"></i>
@@ -224,6 +224,14 @@
         $('.form_datetime').datepicker('update');
         UserRole = getUserRole()
         loadTypes()
+
+        //判断是否是负数
+        $('input[type=number]').blur(function(){
+            if(/^[1-9]+$/.test($(this).val())!=true){
+                Shinez.tip('error','次数的数值不能为负值且最小值为1')
+                $(this).val('')
+            }
+        })
     });
 
     //获取用户角色
