--- a/static/app/statistics/reservation.html
+++ b/static/app/statistics/reservation.html
@@ -53,7 +53,7 @@
     <table id="data-table" class="table table-striped table-bordered table-hover" width="100%">
         <thead>
         <tr style="background-color: #EEE">
-            <th>时间</th>
+            <th>统计日期</th>
             <th>预约名称</th>
             <th>预约类型</th>
             <th>所属站点</th>
