--- a/static/app/statistics/service.html
+++ b/static/app/statistics/service.html
@@ -50,7 +50,7 @@
     <table id="data-table" class="table table-striped table-bordered table-hover" width="100%">
         <thead>
         <tr style="background-color: #EEE">
-            <th>日期</th>
+            <th>统计日期</th>
             <th>服务名称</th>
             <th>服务类型</th>
             <th>站点</th>
