--- a/static/app/statistics/therapist.html
+++ b/static/app/statistics/therapist.html
@@ -50,7 +50,7 @@
     <table id="data-table" class="table table-striped table-bordered table-hover" width="100%">
         <thead>
         <tr style="background-color: #EEE">
-            <th>日期</th>
+            <th>统计日期</th>
             <th>治疗师</th>
             <th>所属站点</th>
             <th>业绩</th>
