--- a/static/app/basic/lease.html
+++ b/static/app/basic/lease.html
@@ -223,7 +223,7 @@
                 Shinez.tip("success", "绑定关系成功");
                 $("#modal-role-edit").modal('hide');
             } else {
-                Shinez.tip("error", ret.msg);
+                Shinez.tip("error", `sssss${ret.msg}`);
             }
         });
     }
