--- a/static/app/basic/lease_add.html
+++ b/static/app/basic/lease_add.html
@@ -57,7 +57,7 @@
                     </td>
                 </tr>
                 <tr width="100">
-                    <th>租赁数量</th>
+                    <th>租赁数量/天</th>
                     <td>
                         <input type="number" class="form-control input-medium" name="leaseAmount"  min="0"  step="0.01"/>
                     </td>
