--- a/static/app/basic/scheme_add.html
+++ b/static/app/basic/scheme_add.html
@@ -1,4 +1,4 @@
-<button class="btn purple right search radius6" style="display: none"><i class="fa fa-search"></i> 查询</button>
+<button class="btn purple right search radius6" onclick="goback()"><i class="fa fa-search"></i> 返回</button>
 <form action="javascript:;" id="form-project" method="post" onsubmit="false">
     <div class="row" style="margin-left: 20px">
         <div style="width: 1200px">
