--- a/static/app/basic/scheme_edit.html
+++ b/static/app/basic/scheme_edit.html
@@ -1,4 +1,4 @@
-<button class="btn purple right search radius6" style="display: none"><i class="fa fa-search"></i> 查询</button>
+<button class="btn purple right search radius6" onclick="goback()"><i class="fa fa-search"></i> 返回</button>
 <form action="javascript:;" id="form-project" method="post" onsubmit="false">
     <input type="hidden" name="id"/>
     <div class="row" style="margin-left: 20px">
@@ -132,36 +132,42 @@
 
     function initData(){
         var id=history.state.params;
-        Shinez.get("/scheme/all?id="+id,function (ret) {
-            $.each(ret[0], function (k, v) {
-                if (k === "schemeDetailImgs") {
-                    return true;
+        Shinez.get("/scheme/all",function (ret) {
+            $.each(ret, function (index, item) {
+                if(item.id==id){
+                    $.each(item,function(k,v){
+                        if (k === "schemeDetailImgs") {
+                            return true;
+                        }
+                        $("*[name=" + k + "]").val(v).attr("src", v).change();
+                    })
+                    $("select[name='schemeTypeId']").val(item.schemeTypeId);
+
+                    var div = $(".upload-multiple").find(".pull-left").last();
+                    $(".upload-multiple").html("");
+                    $(".upload-multiple").html(div);
+                    if(item.schemeDetailImgs){
+                        var imgs = item.schemeDetailImgs.split(",");
+
+                        $.each(imgs, function (m) {
+                            var v = imgs[m];
+                            if (v === "") return true;
+                            //复制新图片选择项
+                            var $newObject = $(".upload-multiple").find(".pull-left").first().clone(true);
+                            $newObject.find("img").attr("src", v);
+                            $newObject.find("input[type=hidden]").val(v);
+                            var i = $newObject.find(".img-del").attr("data-index");
+                            $newObject.find(".img-del").attr("data-index", parseInt(i) + 1);
+                            $(".upload-multiple").before($newObject);
+                        });
+                        registerImageUploadComponent();
+                        $("input[name='schemeDetailImgs']").val(item.schemeDetailImgs);
+
+                    }
+                    editor.$txt.html(item.introduction);
+
                 }
-                $("*[name=" + k + "]").val(v).attr("src", v).change();
             });
-
-            $("select[name='schemeTypeId']").val(ret[0].schemeTypeId);
-
-            var div = $(".upload-multiple").find(".pull-left").last();
-            $(".upload-multiple").html("");
-            $(".upload-multiple").html(div);
-            var imgs = ret[0].schemeDetailImgs.split(",");
-
-            $.each(imgs, function (m) {
-                var v = imgs[m];
-                if (v === "") return true;
-                //复制新图片选择项
-                var $newObject = $(".upload-multiple").find(".pull-left").first().clone(true);
-                $newObject.find("img").attr("src", v);
-                $newObject.find("input[type=hidden]").val(v);
-                var i = $newObject.find(".img-del").attr("data-index");
-                $newObject.find(".img-del").attr("data-index", parseInt(i) + 1);
-                $(".upload-multiple").before($newObject);
-            });
-            registerImageUploadComponent();
-            $("input[name='schemeDetailImgs']").val(ret[0].schemeDetailImgs);
-
-            editor.$txt.html(ret[0].introduction);
         })
     }
 
