--- a/static/app/order/verification.html
+++ b/static/app/order/verification.html
@@ -4,7 +4,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-                    <h4 class="modal-title">治疗类型</h4>
+                    <h4 class="modal-title">治疗参数</h4>
                 </div>
                 <div class="modal-body">
                     <table class="table table-striped table-bordered " width="100%">
@@ -523,7 +523,7 @@
         var identCode=oCurItem[0].identCode
         Shinez.get('/order/cureParam?id='+iCurId,function(ret){
             if(ret.code!=0){
-                var errorMsg={error:'当前患者没有治疗数据'}
+                var errorMsg={error:`没有获取到当前患者治疗数据`}
                 var sHtml=template('dismatched',errorMsg)
                 $('.device-name').empty().append(sHtml)
             }else{
