治疗师管理模块的bug修改和其他问题修改

--- a/static/app/userInfo/therapist.html
+++ b/static/app/userInfo/therapist.html
@@ -104,10 +104,18 @@
 
     $(function () {
         init();
+        let {pageIndex=1,pageSize=10}=history.state.query||{};
+        $('.search').attr('data-index',pageIndex)
+        $('select[name="pageSize"]').val(pageSize)
+        $('.search').trigger('click')
     });
 
     function editTherapist(id) {
         history.state.params=id;
+        history.state.query={
+            pageIndex:$('.search').attr('data-index')||1,
+            pageSize:$('select[name="pageSize"]').val(),
+        }
         loadHtml("/userInfo/therapist_edit");
     }
 
