--- a/static/app/userInfo/therapist_add.html
+++ b/static/app/userInfo/therapist_add.html
@@ -1,6 +1,7 @@
+<button class="btn purple radius6" onclick="goback()"><i class="fa fa-reply"></i>返回</button>
 <form action="javascript:;" id="form-project" method="post" onsubmit="false">
     <div class="row" style="margin-left: 40px">
-        <div style="width: 1200px">
+        <div >
             <table class="table table-striped table-bordered " width="100%">
                 <tr>
                     <th width="120">员工号(限8位)</th>
@@ -18,8 +19,8 @@
                 <tr>
                     <th width="120">性别</th>
                     <td>
-                        <label class="mt-radio"><input type="radio" name="therapistSex" value="0"/><span></span>男</label>
-                        <label class="mt-radio"><input type="radio" name="therapistSex" value="1"/><span></span>女</label>
+                        <label class="mt-radio"><input type="radio" name="therapistSex" value="1"/><span></span>男</label>
+                        <label class="mt-radio"><input type="radio" name="therapistSex" value="2"/><span></span>女</label>
                     </td>
                 </tr>
 
