--- a/static/app/userInfo/therapist_edit.html
+++ b/static/app/userInfo/therapist_edit.html
@@ -1,7 +1,8 @@
+<button class="btn purple radius6" onclick="goback()"><i class="fa fa-reply" ></i>返回</button>
 <form action="javascript:;" id="form-project" method="post" onsubmit="false">
     <input type="hidden" name="id"/>
     <div class="row" style="margin-left: 40px">
-        <div style="width: 1200px">
+        <div >
             <table class="table table-striped table-bordered " width="100%">
                 <tr>
                     <th width="120">员工号(限8位)</th>
@@ -20,9 +21,9 @@
                     <th width="120">性别</th>
                     <td>
                         <label class="mt-radio"><input type="radio" name="therapistSex"
-                                                       value="0"/><span></span>男</label>
+                                                       value="1"/><span></span>男</label>
                         <label class="mt-radio"><input type="radio" name="therapistSex"
-                                                       value="1"/><span></span>女</label>
+                                                       value="2"/><span></span>女</label>
                     </td>
                 </tr>
 
@@ -151,9 +152,15 @@
 
                 if (k === "therapistSex") {
                     if (v) {
-                        $("input[name='" + k + "'][value='" + 1 + "']").prop("checked", true);
+
+                        switch(v){
+                            case 1:$("input[name='" + k + "'][value='" + 1 + "']").prop("checked", true);$("input[name='" + k + "'][value='" + 2 + "']").prop("checked", false);break;
+                            case 2:$("input[name='" + k + "'][value='" + 1 + "']").prop("checked", false);$("input[name='" + k + "'][value='" + 2 + "']").prop("checked", true);break;
+                        }
+                        
                     } else {
-                        $("input[name='" + k + "'][value='" + 0 + "']").prop("checked", true);
+                        $("input[name='" + k + "'][value='" + 1 + "']").prop("checked", false);
+                        $("input[name='" + k + "'][value='" + 2 + "']").prop("checked", false);
                     }
                     return true;
                 }
